--- a/views/template.mustache
+++ b/views/template.mustache
@@ -230,8 +230,8 @@
       })
 
       $('#related-sites').html(templatesHtml)
-      if (currentTemplate.profile.slug == null)
-        return
+      // if (currentTemplate.profile.slug == null)
+      //   return
 
       var url = (currentTemplate.profile.slug.length>0) ? '/api/profile?slug='+currentTemplate.profile.slug : '/api/profile?username='+currentTemplate.profile.username
       getRequest(url, null, function(err2, resp){
