--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -1,14 +1,16 @@
 <div id="footer" class="footer-dark margin-top-80">
 	<div class="container">
 		<div class="row padding-bottom-40">
-			<div class="col-md-6 col-sm-6">
+			<div class="col-md-5 col-sm-12">
 				<img class="footer-logo" src="https://lh3.googleusercontent.com/DacvMRc4I_Zq0hENs6RyqlUcgQqY_jBdcLHvQckcpk3ZecgvzctF9_GnemZE3nCtnWFoY8g5C6gnCmccsMFP7aJi=s140" alt="Vertex 360">
 				<br><br>
-				<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
+				<p>
+					Vertex 360 is a cloud-based development platform that makes it easy to create beautiful, professional websites. Promote your business, work, or just test out new ideas. Vertex 360 has everything you need to create a customized, high-quality free website.
+				</p>
 			</div>
 
-			<div class="col-md-3 col-sm-6">
-				<ul class="footer-links">
+			<div class="col-md-3 col-sm-12 col-xs-6 col-md-offset-1">
+				<ul class="footer-links margin-top-30" style="width:100%">
 					<li><a href="/?selected=faq">FAQ</a></li>
 					<li><a href="/templates">Templates</a></li>
 					<li><a href="/?selected=how+it+works">How It Works</a></li>
@@ -17,8 +19,8 @@
 				<div class="clearfix"></div>
 			</div>
 
-			<div class="col-md-3 col-sm-12">
-				<ul class="footer-links">
+			<div class="col-md-3 col-sm-12 col-xs-6">
+				<ul class="footer-links margin-top-30" style="width:100%">
 					<li><a href="/?selected=faq">Developers</a></li>
 					<li><a href="/templates">Documentation</a></li>
 					<li><a href="#">Terms of Use</a></li>
