--- a/views/template.mustache
+++ b/views/template.mustache
@@ -173,10 +173,13 @@
 </script>
 
 <script type="text/template" id="tpl-clone-source">
-  <h4>Clone Source</h4>
-  <div class="screenshot">
-    <a target="_blank" href="<%{ image }%>=s1024"><img src="<%{ image }%>" /></a>
+  <div style="min-height:120px">
+    <h2 class="margin-bottom-0 margin-top-0">Cloune Source</h2>
+    <p>Clone source</p>
   </div>
+
+  <hr />
+  <a href="/template/<% slug %>" class="button with-icon">View Original Site <i class="sl sl-icon-login"></i></a>
 </script>
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
