clone source text

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -174,8 +174,11 @@
 
 <script type="text/template" id="tpl-clone-source">
   <div style="min-height:120px">
-    <h2 class="margin-bottom-0 margin-top-0">Cloune Source</h2>
-    <p>Clone source</p>
+    <h2 class="margin-bottom-0 margin-top-0">Clone Source</h2>
+    <p>
+      This site was cloned from another template. To see the original
+      template and launch your own version, click the button below.
+    </p>
   </div>
 
   <hr />
