--- a/views/partials/newsletter.mustache
+++ b/views/partials/newsletter.mustache
@@ -1,4 +1,4 @@
-<div id="add-review" class="add-review-box" style="background:#fff">
+<div id="add-review" class="add-review-box margin-top-30" style="background:#fff">
   <h3 class="listing-desc-headline margin-bottom-20">Newsletter</h3>
   <hr />
   <p class="margin-top-20">
