--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -9,7 +9,16 @@
           </a>
 				</div>
 
+				<div class="mmenu-trigger margin-bottom-0">
+					<button class="hamburger hamburger--collapse" type="button">
+						<span class="hamburger-box">
+							<span class="hamburger-inner"></span>
+						</span>
+					</button>
+				</div>
+
 			</div>
+
 
 			<div id="nav-menu" class="right-side">
 				<div class="header-widget">
