--- a/views/account.mustache
+++ b/views/account.mustache
@@ -185,7 +185,7 @@
 		</div>
 
     <div class="col-lg-4 col-md-4">
-      <div class="dashboard-list-box margin-top-0" style="position:fixed;width:310px">
+      <div id="create-template-form" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px">
         <h4 class="gray">Create Template</h4>
         <div class="dashboard-list-box-static">
 
@@ -310,11 +310,13 @@
         if (selected == 'profile'){
           $('#content-sites').css('display', 'none')
           $('#content-profile').css('display', '')
+          $('#create-template-form').css('display', 'none')
         }
 
         if (selected == 'sites'){
           $('#content-profile').css('display', 'none')
           $('#content-sites').css('display', '')
+          $('#create-template-form').css('display', '')
         }
 
         sidebarMenu.forEach(function(listItem){
