toggle create template form

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -185,7 +185,7 @@
 		</div>
 
     <div class="col-lg-4 col-md-4">
-      <div id="create-template-form" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px">
+      <div id="create-template-form" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px;display:none">
         <h4 class="gray">Create Template</h4>
         <div class="dashboard-list-box-static">
 
