--- a/views/account.mustache
+++ b/views/account.mustache
@@ -193,10 +193,10 @@
           <br />
           <small>Profile</small>
           <h4 class="padding-left-0 margin-bottom-20 padding-top-0 padding-bottom-10">
-            <a style="text-transform:capitalize" href="/profile/dan.kwon234-4ckonr">{{user.firstName}} {{user.lastName}}</a>
+            <a style="text-transform:capitalize" href="/profile/{{user.slug}}">{{user.firstName}} {{user.lastName}}</a>
           </h4>
           <p style="font-size:14px;line-height:20px">{{user.bio}}</p>
-          <a href="#" class="button btn-view">View Full Profile</a>
+          <a href="/profile/{{user.slug}}" class="button btn-view">View Full Profile</a>
         </div>
       </div>
 
