larger join button

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -192,7 +192,7 @@
       and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
     </p>
 
-    <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
+    <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px;padding:16px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
   </div>
   {{>footer-dark}}
 </div>
@@ -325,7 +325,7 @@
       </p>
 
       <%#showGetStarted%>
-      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
+      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px;padding:16px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
       <%/showGetStarted%>
   	</div>
   </div>
