launch template description

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -90,18 +90,18 @@
     				</div>
 
             <!-- About Author -->
-      			<div id="launch-template-container" class="about-author" style="margin:0px;border-top:1px solid #ededed;background:#fffffa">
+      			<div id="launch-template-container" class="about-author" style="margin:0px;border-top:1px solid #ededed;border-bottom:1px solid #ededed;background:#fffffa">
       				<div style="min-height:120px">
                 <h2 class="margin-bottom-20 margin-top-0">Launch This Site</h2>
-      					<p>Launch Site</p>
+      					<p>To launch this template on your own account and create a website with your site information, details, images and more, click the button below.</p>
       				</div>
 
               <hr />
               <a id="btn-launch-template" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Launch This Template <i class="sl sl-icon-login"></i></a>
       			</div>
+            {{>newsletter}}
     			</div>
 
-          {{>newsletter}}
     	  </div>
 
       	<!-- Widgets -->
