--- a/views/template.mustache
+++ b/views/template.mustache
@@ -93,7 +93,7 @@
       			<div id="launch-template-container" class="about-author" style="margin:0px;border-top:1px solid #ededed;border-bottom:1px solid #ededed;background:#fffffa">
       				<div style="min-height:120px">
                 <h2 class="margin-bottom-20 margin-top-0">Launch This Site</h2>
-      					<p>To launch this template on your own account and create a website with your site information, details, images and more, click the button below.</p>
+      					<p>To launch your own version of this template and create a website with your site information, details, images and more, click the button below.</p>
       				</div>
 
               <hr />
