min width for post images

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -39,6 +39,10 @@
         padding: 16px !important;
       }
     }
+
+    .post-content img {
+      min-width: 320px;
+    }
   </style>
 </head>
 
